ADP-124/fixingSpacingIssues-Carlos

--- a/components/_helper_components/article/section/styles.scss
+++ b/components/_helper_components/article/section/styles.scss
@@ -38,6 +38,8 @@
     @include breakpoint(desktop-sm) {
       padding: 0 80px 0 0;
     }
+
+    @include arc-ad-spacing;
   }
 
   &.with-rightRail {
